grpc todo server

--- a/todo-client/pom.xml
+++ b/todo-client/pom.xml
@@ -46,6 +46,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.bank</groupId>
+            <artifactId>todo-proto</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
