--- a/todo-server/pom.xml
+++ b/todo-server/pom.xml
@@ -46,6 +46,13 @@
             <artifactId>todo-proto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-server-spring-boot-starter</artifactId>
+            <version>2.15.0.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
